      `bumps' adjacent displays such that they are not obscured.
    - Case-insensitive search in the source text is now supported.

    Bug fixes:
    - Getting and identifying core dumps now works on Solaris, AIX and
      other architectures.
    - `Edit' no longer causes DDD to crash.
    - The separate execution TTY now works with Sun DBX 4.0.

    There are also some more minor improvements and bug fixes; see the
    `ChangeLog' file for details.



DDD 2.2.1
---------

    DDD 2.2.1 fixes some minor bugs introduced in DDD 2.2.

    User-visible changes to DDD 2.2:
    - When saving a session, you can now select the method for getting
      core files.  This is useful on Solaris and SunOS systems.

    Bug fixes:
    - Auto-raised menus have caused problems on some architectures:
      they are now disabled by default.  Use `Ddd*autoRaiseMenu: true'
      in `~/.ddd/init' to re-enable them.
    - By default, DDD stops disassembling after 1024 bytes.  This is
      useful when working with the machine code of huge functions.
      See the `maxDisassemble' resource for more info.
    - Several status and diagnostic messages have been reworked; they
      now show the outcome of a command.
    - DDD now works around a bug present in Linux libc 5.4.38 to
      5.4.40 that prevented DDD <-> GDB communication.
    - The `gcore' method for getting core files is now fully supported.
    - Various glitches in command queue management have been fixed:
      * Interacting with the debuggee (or interrupting it) now
        properly discards pending debugger commands.
      * In `--tty' mode, DDD can now handle long command sequences.
        This is useful when running DDD from Emacs.
      * In `--tty' mode, you can now send EOF (^D) characters to the
        debugged program without having DDD terminate GDB.
    - Trying to open non-existent source files no longer confuses GDB.
    - When running in the background, DDD is no longer interrupted by